# Smart-Waiter

./: README.md
esp/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig
esp/components/esp_configurator_driver/include/: ESPConfigurator.h
esp/components/esp_configurator_driver/src/: ESPConfigurator.cpp
esp/components/microphone_driver/: CMakeLists.txt
esp/components/microphone_driver/include/: Microphone.h
esp/components/microphone_driver/src/: Microphone.cpp
esp/components/neural_net_driver/: CMakeLists.txt
esp/components/neural_net_driver/include/: ModelInference.h  neural_net.h  q_lite_model.h
esp/components/neural_net_driver/src/: ModelInference.cpp  QLiteModel.cpp  neural_net.cpp  q_lite_model.cpp
esp/components/ring_buffer_driver/: CMakeLists.txt
esp/components/speaker_driver/: CMakeLists.txt
esp/main/: CMakeLists.txt  idf_component.yml  main.cpp
esp/main/ulp/: main.c
esp32/: .gitignore  g_model.cpp  platformio.ini
esp32/include/: DetectionModel.h  ESPConfigurator.h  Global.h  LiteModel.h  Microphone.h  ModelInference.h  Ringbuffer.h  Speaker.h
esp32/src/: DetectionModel.cpp  ESPConfigurator.cpp  LiteModel.cpp  Microphone.cpp  ModelInference.cpp  QLiteModel.cpp  Ringbuffer.cpp  Speaker.cpp  main.cpp
wakeword/: .gitignore  ConvertModel.py  GenerateData.py  GenerateDatasets.py  SortData.py  TrainModel.py  pyproject.toml  setup.sh
wakeword/model/: fully_trained.keras  lite_model.tflite  q_lite_model.tflite
wakeword/util/: AugmentBackground.py  AugmentWakeword.py  Predict.py  SortData.py
(+8 files in other folders)
